# experiment-udiva

./: .gitignore  ADDING_MODELS.md  AGENTS.md  pyproject.toml
code/: main.py  test_processor.py
code/configs/experiments/: chunk_classification.yaml  vqa.yaml  vqa_qwen.yaml  vqa_qwen_server.yaml
code/configs/prompts/: vqa_prompt.py
code/refrence-data-layer/: data_manager.py
code/refrence-data-layer/data/: dataloader.py  download_annotations.py  download_metadata.py  download_mosaics.py  download_transcripts.py  extract_whisperx.py  filter_transcripts.py  reassign_speakers.py  select_best_whisperx.py  test_dataloader.ipynb  unzip_all.py
code/src/: __init__.py  processor.py
code/src/core/: __init__.py  capabilities.py  interfaces.py  registry.py  schemas.py
code/src/data/: __init__.py  chunker.py  pipeline.py  video_reader.py
code/src/execution/: __init__.py  single_device.py
code/src/experiments/: __init__.py  chunk_classification.py  vqa.py
code/src/models/: __init__.py  base.py  gemma_vlm.py  qwen_omni.py
code/src/output/: __init__.py  classification.py  vqa.py
code/tests/: conftest.py  test_capabilities.py  test_chunker.py  test_data_pipeline.py  test_execution.py  test_experiment.py  test_model_adapter.py  test_output.py  test_pipeline.py  test_qwen_omni.py  test_qwen_omni_e2e.py  test_registry.py  test_schemas.py  test_video_reader.py  test_vqa_experiment.py
